wrote EdamamWrapper class with one test (currently failing because ?? )

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,5 +10,7 @@
 
 <%= yield %>
 
+<!-- THE BELOW LINK NEEDS TO BE PLACED NEXT TO THE NUTRITION INFO?? -->
+<footer><%= link_to image("app/assets/images/edaman-logo.png"), "http://developer.edamam.com" %></footer>
 </body>
 </html>
