WIP modified lib classes -- displays but is displaying the same thing

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,6 @@
 <%= yield %>
 
 <!-- THE BELOW LINK NEEDS TO BE PLACED NEXT TO THE NUTRITION INFO?? -->
-<footer><%= link_to image("app/assets/images/edaman-logo.png"), "http://developer.edamam.com" %></footer>
+<footer><%= link_to image_tag("edaman-logo.png"), "http://developer.edamam.com" %></footer>
 </body>
 </html>
