wrote controller tests, recipe tests, finished find method, stubbed out show page

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -7,7 +7,7 @@
   <% @recipes.each do |recipe| %>
     <li>
       <%= image_tag(recipe.image) %>
-      <%= link_to recipe.name, recipe_path(recipe) %>
+      <%= link_to recipe.name, recipe_path(recipe.uri) %>
     </li>
 
   <% end %>
