basic show page; modified nutrition option to use data for better display options

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,24 @@
  *= require_tree .
  *= require_self
  */
+
+html {
+  margin-top: 3em;
+  margin-left: 5em;
+}
+
+footer {
+  clear: both;
+}
+
+h1, h2 {
+  text-align: center;
+}
+
+ul {
+  list-style: none;
+}
+
+ul ul {
+  list-style: none;
+}
