added Recipe.reset method; modified search action to delete session info; modified index action to use reset and to keep track of session information so back buttons on show pages work

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,5 +1,5 @@
 <h2>
-  You searched for <strong><%= @query %></strong>!
+  You searched for <strong><%= session[:query] %></strong>!
 </h2>
 
 <section class="row small-6 large-6">
