modified all methods to collect page and count data

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -2,7 +2,7 @@
   You searched for <strong><%= session[:query] %></strong>!
 </h2>
 
-<section class="row small-6 large-6">
+<section class="row small-6 large-6 small-text-center medium-text-center large-text-center">
   <p class="column">
     <%= link_to "Search again", search_path, class: "success button" %>
   </p>
