--- a/app/views/recipes/search.html.erb
+++ b/app/views/recipes/search.html.erb
@@ -1,8 +1,19 @@
 
-<h1>Recipe Search</h1>
+<h2>Recipe Search</h2>
 
 <%= form_tag recipes_path, method: :get do %>
-  <%= label_tag :search, "Search Recipes: " %>
-  <%= text_field_tag :search %>
-  <%= submit_tag "Search", class: "button" %>
+  <div class="row small-12 medium-12 large-10 end">
+    <div class="column">
+      <%= label_tag :search, "Search Recipes:" %>
+    </div>
+    <div class="column">
+      <%= text_field_tag :search %>
+    </div>
+    <%= hidden_field_tag :from, 0 %>
+    <div class="column">
+      <%= submit_tag "Search", class: "expanded button" %>
+    </div>
+  </div>
+
+
 <% end %>
