--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,12 +15,13 @@
  */
 
 html {
-  margin-top: 3em;
-  margin-left: 5em;
+  margin: 2em 0 0 2em;
 }
 
 footer {
   clear: both;
+  text-align: center;
+  margin-bottom: 2em;
 }
 
 h1, h2 {
