--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,14 +14,29 @@
  *= require_self
  */
 
+@import url('https://fonts.googleapis.com/css?family=Abhaya+Libre|Zeyada');
+
 html {
   margin: 2em 0 0 2em;
+}
+
+body {
+  font-family: 'Abhaya Libre', serif;
 }
 
 footer {
   clear: both;
   text-align: center;
   margin-bottom: 2em;
+}
+
+h1, h2, h3, h4 {
+  font-family: 'Zeyada', cursive;
+}
+
+h2 small {
+  color: #848484;
+  font-family: 'Abhaya Libre', serif;
 }
 
 h1, h2 {
@@ -34,4 +49,8 @@ ul {
 
 ul ul {
   list-style: none;
+}
+
+main > section:first-of-type ul {
+  list-style: disc;
 }
