--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,7 +17,7 @@
 @import url('https://fonts.googleapis.com/css?family=Abhaya+Libre|Zeyada');
 
 html {
-  margin: 2em 0 0 2em;
+  margin: 2em 0 2em 2em;
 }
 
 body {
